add subjects
